<resources>
    <string name="app_name">Mood Tracker</string>
    <string name="comment">Commentaire</string>
    <string name="button_to_write_a_comment">Button to write a comment</string>
    <string name="button_to_get_the_comments_history">Button to get the comments history</string>
    <string name="button7">Il y a une semaine</string>
    <string name="button6">Il y a six jours</string>
    <string name="button5">Il y a cinq jours</string>
    <string name="button4">Il y a quatre jours</string>
    <string name="button3">Il y a trois jours</string>
    <string name="button2">Avant-hier</string>
    <string name="button1">Hier</string>
    <string name="hier">Hier</string>
    <string name="avant_hier">Avant-hier</string>
    <string name="il_y_a_trois_jours">Il y a trois jours</string>
    <string name="il_y_a_quatre_jours">Il y a quatre jours</string>
    <string name="il_y_a_cinq_jours">Il y a cinq jours</string>
    <string name="il_y_a_six_jours">Il y a six jours</string>
    <string name="il_y_a_une_semaine">Il y a une semaine</string>
</resources>
