<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/warm_grey"
        android:drawableEnd="@drawable/ic_comment_black_48px"
        android:drawablePadding="6dp"
        android:gravity="top|start"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/il_y_a_une_semaine"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/warm_grey"
        android:drawableEnd="@drawable/ic_comment_black_48px"
        android:drawablePadding="6dp"
        android:gravity="top|start"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/il_y_a_six_jours"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/warm_grey"
        android:drawableEnd="@drawable/ic_comment_black_48px"
        android:drawablePadding="6dp"
        android:gravity="top|start"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/il_y_a_cinq_jours"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/warm_grey"
        android:drawableEnd="@drawable/ic_comment_black_48px"
        android:drawablePadding="6dp"
        android:gravity="top|start"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/il_y_a_quatre_jours"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/warm_grey"
        android:drawableEnd="@drawable/ic_comment_black_48px"
        android:drawablePadding="6dp"
        android:gravity="top|start"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/il_y_a_trois_jours"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/warm_grey"
        android:drawableEnd="@drawable/ic_comment_black_48px"
        android:drawablePadding="6dp"
        android:gravity="top|start"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/avant_hier"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/warm_grey"
        android:drawableEnd="@drawable/ic_comment_black_48px"
        android:drawablePadding="6dp"
        android:gravity="top|start"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/hier"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="bold" />
</LinearLayout>